--- a/src/css/other/personalCenter.css
+++ b/src/css/other/personalCenter.css
@@ -165,6 +165,10 @@
 	border-bottom: 0.02rem solid #f4f5f7;
 	font-size: 0.55rem;
 }
+.contInfo .exchangeMoney input.cash{
+	border:none;
+	margin-top:0.4rem;
+}
 .contInfo .exchangeMoney .available{
 	height: auto;
 	overflow: hidden;
@@ -198,6 +202,39 @@
 	display: block;
 	margin:0.6rem auto 0;
 	background: #ecbc68;
+}
+.elasticBox .onceAgain{
+	width: 5.2rem;
+	height: 2.3rem;
+	background: #fff;
+	position: fixed;
+	top:50%;
+	left: 50%;
+	z-index: 9999;
+	margin:-1.15rem 0 0 -2.6rem;
+}
+.elasticBox .onceAgain p{
+	font-size: 0.32rem;
+	color:#444;
+	text-align: center;
+	margin:0.6rem 0 0.42rem 0;
+}
+.elasticBox .onceAgain .operation{
+	height: 0.83rem;
+	line-height: 0.83rem;
+	border-top:0.02rem solid #f4f5f7;
+}
+.elasticBox .onceAgain .operation a{
+	width: 49.5%;
+	border-right: 0.02rem solid #f4f5f7;
+	float: left;
+	display: block;
+	text-align: center;
+	font-size: 0.26rem;
+	color:#444;
+}
+.elasticBox .onceAgain .operation a:last-child{
+	border:none;
 }
 /*兑换Xp币 结束*/
 /*账号信息 开始*/
