--- a/src/css/common/common.css
+++ b/src/css/common/common.css
@@ -24,7 +24,7 @@ del, ins {
 li {
   list-style: none;
 }
-h1, h2, h3, h4, h5, h6 { 
+h1, h2, h3, h4, h5, h6 {
   font-size: 100%;
   font-weight: normal;
 }
@@ -53,7 +53,7 @@ img {
   border: 0;
 }
 html{font-size:50px}
-html, body {
+body {
   width: 100%;
   height: 100%;
   font-family:"\5fae\8f6f\96c5\9ed1",Arial,sans-serif;
@@ -200,10 +200,10 @@ header .releaseBtn{
   margin:0 auto;
   position: fixed;
   bottom:0;
-  -webkit-box-shadow:0 0 0.25rem #d3d4d7;  
-  -moz-box-shadow:0 0 0.25rem #d3d4d7;  
-  box-shadow:0 0 0.25rem #d3d4d7;  
-  z-index: 999; 
+  -webkit-box-shadow:0 0 0.25rem #d3d4d7;
+  -moz-box-shadow:0 0 0.25rem #d3d4d7;
+  box-shadow:0 0 0.25rem #d3d4d7;
+  z-index: 999;
 }
 .footerNav a,
 .memberFooter a{
@@ -382,39 +382,39 @@ header .releaseBtn{
   display: block;
   margin: auto auto;
 }
-.contain .containContent .text .title{ 
-  color: #576788; 
+.contain .containContent .text .title{
+  color: #576788;
   font-size: 1.8rem;
 }
 .contain .containContent .text .txt{
-  color: #323232; 
+  color: #323232;
   font-size: 1.5rem;
 }
 .contain .containContent .text .tm{
-  font-size: 1.4rem;    
+  font-size: 1.4rem;
   overflow: hidden;
 }
 .contain .containContent .text .tm .fl{
-  float: left;  
+  float: left;
   padding-left: 5px;
 }
 .contain .containContent .text .tm .fr{
-  float: right; 
+  float: right;
   padding-right: 15px;
 }
-.contain .containContent .text .cmt{ 
-  color: #444444; 
-  font-size: 1.5rem;   
-  background-color: #eeeeee; 
+.contain .containContent .text .cmt{
+  color: #444444;
+  font-size: 1.5rem;
+  background-color: #eeeeee;
   margin-top: 5px;
   padding: 5px;
 }
-.contain .containContent .text .cmt .fav{ 
-  color: #576788; 
-  border-bottom: 1px solid #d5d5d5; 
+.contain .containContent .text .cmt .fav{
+  color: #576788;
+  border-bottom: 1px solid #d5d5d5;
   padding-bottom: 5px;
 }
-.contain .containContent .text .cmt span{ 
+.contain .containContent .text .cmt span{
   color: #576788;
 }
 /*缩略图 结束*/
@@ -709,7 +709,7 @@ header .releaseBtn{
     width: .7rem;
     height: .3rem;
     position: absolute;
-    top: 0;left: 0;  
+    top: 0;left: 0;
     z-index: 2;
     border: 0;
     background: 0 0;
@@ -822,10 +822,10 @@ header .releaseBtn{
     width: 0;
     height: 0;
     transform:rotate(270deg);
-  -ms-transform:rotate(270deg);   
-  -moz-transform:rotate(270deg); 
-  -webkit-transform:rotate(270deg); 
-  -o-transform:rotate(270deg); 
+  -ms-transform:rotate(270deg);
+  -moz-transform:rotate(270deg);
+  -webkit-transform:rotate(270deg);
+  -o-transform:rotate(270deg);
   margin-left: -0.1rem;
 }
 .propaganda .propagandaList,
@@ -923,14 +923,14 @@ header .releaseBtn{
     }
   }
 }
-@media (min-device-width : 375px) and (max-device-width : 667px) and (-webkit-min-device-pixel-ratio : 2){ 
+@media (min-device-width : 375px) and (max-device-width : 667px) and (-webkit-min-device-pixel-ratio : 2){
     .footerNav,
     .memberFooter{
       height: 1.06rem;
     }
-    
+
 }
-@media (min-device-width : 414px) and (max-device-width : 736px) and (-webkit-min-device-pixel-ratio : 3){ 
+@media (min-device-width : 414px) and (max-device-width : 736px) and (-webkit-min-device-pixel-ratio : 3){
     .footerNav,
     .memberFooter{
       height: 1rem;
