--- a/src/css/common/common.css
+++ b/src/css/common/common.css
@@ -883,10 +883,150 @@ header .releaseBtn{
   font-size: 0.18rem;
   color:#fff;
 }
+/*订单详情*/
+.orderOption .optionNav{
+  width: 100%;
+    height: 0.8rem;
+    line-height: 0.8rem;
+    overflow: hidden;
+    background: #fff;
+    top: 1.8rem;
+}
+.orderOption .optionNav a{
+  height: 0.78rem;
+    line-height: 0.78rem;
+    border-bottom: 0.02rem solid #fff;
+    display: inline-block;
+    color: #747474;
+    float: left;
+    text-align: center;
+    font-size: 0.28rem;
+    margin: 0 0.7rem 0 0.4rem;
+}
+.orderOption .optionNav a.Cur{
+  border-bottom: 0.02rem solid #ecbc68;
+    color: #ecbc68;
+}
+.orderOption .optionCont{
+  height: auto;
+  overflow: hidden;
+  margin-top: 1.7rem;
+}
+.optionCont .opContInfo li{
+  height: auto;
+  overflow: hidden;
+  background: #fff;
+  margin-top: 0.15rem;
+}
+.opContInfo li .infoTop,
+.opContInfo li .timePrice{
+  height: auto;
+  overflow: hidden;
+  padding:0.23rem 0.2rem 0.23rem 0.4rem;
+}
+.opContInfo li .timePrice{
+  padding:0.2rem 0.2rem 0.2rem 0.4rem;
+}
+.opContInfo li .infoTop span{
+  font-size: 0.24rem;
+  color:#7b7b7b;
+  display: inline-block;
+  float: left;
+  margin-right: 0.28rem;
 
-
-
-
+}
+.opContInfo li .infoTop em{
+  display: inline-block;
+  float: right;
+  font-size: 0.18rem;
+  color:#ecbc68;
+  margin-top: 0.03rem;
+  margin-left: 0.1rem;
+}
+.opContInfo li .infoMiddle{
+  height: auto;
+  overflow: hidden;
+  background: #f7f7f7;
+  display: block;
+  padding:0.24rem;
+}
+.opContInfo li .infoMiddle .middleImg{
+  width:1.22rem;
+  height: 1.22rem;
+  background: #fff;
+  float: left;
+  overflow: hidden;
+  margin-right: 0.08rem;
+  margin-top: 0.03rem;
+}
+.opContInfo li .infoMiddle .middleImg img{
+  height: 100%;
+  display: block;
+  margin:0 auto;
+}
+.opContInfo li .infoMiddle .middleDet{
+  width: 5.7rem;
+  float: left;
+}
+.opContInfo .middleDet .middleTitle{
+  height: auto;
+  overflow: hidden;
+}
+.opContInfo .middleDet .middleTitle p{
+  width:4.15rem;
+  height: 0.75rem;
+  overflow: hidden;
+  float: left;
+  color:#444;
+  font-size: 0.26rem;
+}
+.opContInfo .middleDet .middleTitle span{
+  font-size: 0.26rem;
+  color:#f5500e;
+  display: inline-block;
+  float: right;
+}
+.opContInfo .middleDet .orderNum{
+  float: right;
+  font-size: 0.22rem;
+  color:#7b7b7b;
+  margin-top: 0.03rem;
+}
+.opContInfo li .timePrice span{
+  display: inline-block;
+  float: left;
+  font-size: 0.24rem;
+  color:#7b7b7b;
+}
+.opContInfo li .timePrice .discount,
+.opContInfo li .timePrice .total{
+  float: right;
+  color: #7b7b7b;
+  font-size: 0.22rem;
+  margin-top: 0.02rem;
+}
+.opContInfo li .timePrice .total{
+  margin:0 0.05rem 0 0.23rem;
+}
+.opContInfo li .timePrice .total span{
+  float: right;
+  font-size: 0.26rem;
+  color:#f5500e;
+  display: inline-block;
+  margin-top: -0.03rem;
+}
+.optionCont .opContInfo .infoBottom{
+  float: right;
+  margin:0.1rem 0 0.2rem 0;
+}
+.opContInfo .infoBottom a.but{
+  font-size: 0.24rem;
+  color:#ecbc68;
+  border:0.02rem solid #ecbc68;
+  display: inline-block;
+  padding:0.15rem 0.17rem;
+  margin-right: 0.26rem;
+}
 
 
 
