--- a/src/css/other/fragmentary.css
+++ b/src/css/other/fragmentary.css
@@ -228,7 +228,9 @@
 /*营销助手 开始*/
 .maketingMain,
 .rewardTaskMain{
-	margin:0.9rem 0 0.2rem 0;
+	width: 100%;
+	top:0.9rem;
+	position: absolute;
 }
 .maketingMain .maketingNav,
 .rewardTaskMain .rewardNav{
@@ -261,7 +263,10 @@
 .rewardTaskMain .rewardCont{
 	height: auto;
 	overflow: hidden;
-	margin:1.7rem 0 0 0;
+	margin:0.8rem 0 0 0;
+}
+.rewardTaskMain .rewardCont{
+	margin-top: 0.95rem;
 }
 .maketingCont .contInfo,
 .rewardCon .confInfo{
@@ -1999,9 +2004,12 @@ header .remind{
 	top:0.9rem;
 }
 .salesOrderMain .searchMain{
+	width:100%;
 	height: 0.88rem;
 	line-height: 0.88rem;
 	background: #fff;
+	position: fixed;
+	top:0.9rem;
 	border-bottom: 0.02rem solid #f4f5f7;
 }
 .salesOrderMain .searchMain input{
@@ -2019,7 +2027,11 @@ header .remind{
 	color:#444;
 	font-size: 0.26rem;
 }
-
+.orderOption .optionCont .opContInfo{
+  height: auto;
+  overflow: hidden;
+  display: none;
+}
 /*销售订单 结束*/
 /*新人手册详细 开始*/
 .schoolContent .brochureBg{
@@ -2097,9 +2109,187 @@ header .remind{
 /*新人手册详细 结束*/
 /*数据中心 开始*/
 .dataCenter{
+	width: 7.5rem;
+	height: auto;
+	overflow: hidden;
+	position: absolute;
+	top:0.9rem;
+	padding-bottom: 0.3rem;
+}
+.dataCenter .dataCenterInfo{
+	width: 7.02rem;
+	height: auto;
+	overflow: hidden;
+	background: #fff;
+	-webkit-box-shadow: 0 0 0.2rem #e9eaeb;
+    -moz-box-shadow: 0 0 0.2rem #e9eaeb;
+    box-shadow: 0 0 0.2rem #e9eaeb;
+    margin:0.15rem auto 0;
+}
+.dataCenterInfo .dataTitle{
+	height: 0.92rem;
+	line-height: 0.92rem;
+	overflow: hidden;
+	border-bottom: 0.02rem solid #f4f5f7;
+}
+.dataCenterInfo .dataTitle em{
+	width: 0.08rem;
+	height: 0.27rem;
+	display: inline-block;
+	float: left;
+	background: #ecbc68;
+	margin:0.35rem 0.15rem 0 0;
+}
+.dataCenterInfo .dataTitle h3{
+	font-size: 0.3rem;
+	color:#444;
+	float: left;
+	margin-right: 0.15rem;
+}
+.dataCenterInfo .dataTitle span{
+	display: inline-block;
+	float: left;
+	font-size: 0.2rem;
+	color:#9b9b9b;
+}
+.dataCenter .fraction{
 	height: auto;
 	overflow: hidden;
 }
+.dataCenter .fraction p{
+	font-size: 0.26rem;
+	color:#666;
+	text-align: center;
+	margin:0.32rem 0 0.75rem 0;
+}
+.dataCenter .fraction .progress{
+	width: 6.1rem;
+	height: 0.08rem;
+	background: #f0f0f0;
+	margin:0 auto 0.35rem;
+	position: relative;
+	border-radius: 0.15rem;
+}
+.fraction .progress .progressBar{
+	width: 0;
+	position: relative;
+	-webkit-box-shadow: inset 0 -1px 0 rgba(0,0,0,.15);
+    box-shadow: inset 0 -1px 0 rgba(0,0,0,.15);
+    -webkit-transition: width 0.6s ease;
+    -o-transition: width 0.6s ease;
+    transition: width 0.6s ease;
+    background:#ecbc68;
+    height: 100%;
+    text-align: center;
+    float: left;
+}
+.fraction .progress .progressBar:after {
+    content: "";
+    width: 0.2rem;
+    height: 0.2rem;
+    border-radius: 50%;
+    background: #ecbc68;
+    position: absolute;
+    right: -0.05rem;
+    top: -0.1rem;
+    border: 0.05rem solid #f5ddb3;
+}
+.fraction .progress .progressBar .progressVal{
+	width: 0.45rem;
+	height: 0.37rem;
+	background: url(../../images/threeLevel/speedNum.png) no-repeat;
+	background-size: 100%;
+	position: absolute;
+	top:-0.55rem;
+	right: -0.15rem;
+	text-align: center;
+	font-size: 0.2rem;
+	color:#fff;
+}
+.dataCenterInfo .todayIng{
+	height: auto;
+	overflow: hidden;
+}
+.dataCenterInfo .todayIng li{
+	width: 33%;
+	text-align: center;
+	float: left;
+	color:#ecbc68;
+}
+.dataCenterInfo .todayIng li span,
+.dataCenterInfo .dataTaber ul.tabNave li span{
+	display: inline-block;
+	font-size: 0.4rem;
+	margin:0.35rem 0 0.15rem 0;
+}
+.dataCenterInfo .todayIng li p,
+.dataCenterInfo .dataTaber ul.tabNave li p{
+	font-size: 0.24rem;
+	margin-bottom: 0.3rem;
+}
+.dataCenterInfo .dataTaber{
+	
+}
+.dataCenterInfo .dataTaber ul.tabNave{
+
+}
+.dataCenterInfo .dataTaber ul.tabNave li{
+	width: 50%;
+	text-align: center;
+	float: left;
+	color:#ecbc68;
+}
+.dataCenterInfo .dataTaber ul.tabNave li.Cur{
+	background: url(../../images/threeLevel/triangleIng.png) no-repeat center bottom;
+	background-size: 10%;
+}
+.dataTaber .tabCont{
+	width: 100%;
+	height: auto;
+	overflow: hidden;
+	border-top: 0.04rem solid #ecbc68;
+	background: #faf9f9;
+	float: left;
+}
+.dataTaber .tabCont li{
+	height: auto;
+	overflow: hidden;
+	display: none;
+}
+.dataTaber .tabCont li .contInfo{
+	width: 50%;
+	text-align: center;
+	float: left;
+}
+.dataTaber .tabCont li .contInfo span{
+	font-size: 0.26rem;
+	color:#444;
+	display: inline-block;
+	margin:0.24rem 0 0.15rem 0;
+}
+.dataTaber .tabCont li .contInfo p{
+	font-size: 0.24rem;
+	color:#666;
+	margin-bottom: 0.25rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /*数据中心 结束*/
 
 
