--- a/src/css/common/common.css
+++ b/src/css/common/common.css
@@ -53,7 +53,7 @@ img {
   border: 0;
 }
 html{font-size:50px}
-body {
+ body {
   width: 100%;
   height: 100%;
   font-family:"\5fae\8f6f\96c5\9ed1",Arial,sans-serif;
@@ -809,8 +809,9 @@ header .releaseBtn{
     display: inline-block;
     margin-top: 0.1rem;
 }
-.nationalMain .propaganda em.triangle,
-.memberDatil em.triangle{
+.nationalMain >>> .propaganda >>> em >>> .triangle,
+>>> .triangle,
+.memberDatil >>> em >>> .triangle{
   display: block;
     position: absolute;
     bottom: 0;
